--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="highscores">View High Scores</a></div>
 
-<div id= "start">Start Quiz</div>
+<button id= "start">Start Quiz</button>
 
 <div id= "quiz" style= "display : none;">
 <div id= "question"><p>Question</p></div>
