--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
 </head>
 <body>
  <div id ="container">
-<div id="highscores">View High Scores</a></div>
-<div id= "timer"></div>
-<div id= "question">
-    <h1>Coding Quiz Challenge</h1>
-    <p>Try to answer the following code-related questions within
-        the time limit. <br>Keep in mind that incorrect answers will 
-        penalize your <br>score/time by ten seconds!
-    </p>
-<ul id= "choices"></ul>
-<button id="start" onclick="startquiz()">Start Quiz</button>
-</div>
+    <div id="highscores">View High Scores</a></div>
+    <div id= "timer"><h4>Timer: <span id="count">0</span></h4>
+    </div>
+    <div id= "question">
+        <h1>Coding Quiz Challenge</h1>
+        <p>Try to answer the following code-related questions within
+            the time limit. <br>Keep in mind that incorrect answers will 
+            penalize your <br>score/time by ten seconds!
+        </p>
+    <ul id= "choices"></ul>
+    <button id="start" onclick="startquiz()">Start Quiz</button>
+    </div>
 </div>
     <script src="assets/js/script.js"></script>
 </body>
